maj commande livres

--- a/livres.html
+++ b/livres.html
@@ -915,16 +915,16 @@
   <div class="booksLine">
     <!-- Livre 57-->
     <figure>
-      <a href="https://www.amazon.fr/%C3%88-molto-semplice-Massimiliano-Allegri/dp/8820067331/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=massimiliano+allegri&qid=1620833019&sr=8-2"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/61mrlb0JSwL.jpg" alt="Allegri" class="books" /></a>
+      <a href="https://www.amazon.fr/tempo-lento-Giuliano-Sangiorgi/dp/880624910X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1220IKN4HM4FM&dchild=1&keywords=il+tempo+di+un+lento&qid=1623591754&sprefix=il+tempo+di+un+%2Caps%2C149&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61OIz+Sac7S.jpg"
+          alt="Il tempo di un lento" class="books" /></a>
       <figcaption>
-        Massimiliano Allegri
+        Giuliano Sangiorgi
       </figcaption>
       <figcaption>
-        È molto semplice
+        Il tempo di un lento
       </figcaption>
       <figcaption>
-        19,90€
+        17,00€
       </figcaption>
     </figure>
 
@@ -1338,16 +1338,16 @@
 
     <!--Livre 84-->
     <figure>
-      <a href="https://www.amazon.fr/volevo-diventare-realizzato-grazie-Gomorra/dp/8817089591/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=non+volevo+diventare&qid=1613398717&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/91SZi-AVdhL.jpg" alt="Non volevo diventare un boss" class="books" /></a>
+      <a href="https://www.amazon.fr/M%C3%A9moires-flous-Jim-Carrey/dp/2021471128/ref=sr_1_18?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jim+carrey&qid=1623591475&sr=8-18"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61hrgr9nyDL.jpg" alt="Jim Carrey" class="books" /></a>
       <figcaption>
-        Salvatore Esposito
+        Jim Carrey
       </figcaption>
       <figcaption>
-        Non volevo diventare un boss
+        Mémoires flous
       </figcaption>
       <figcaption>
-        18,00€
+        19,00€
       </figcaption>
     </figure>
   </div>
@@ -1417,16 +1417,19 @@
   <div class="booksLine">
     <!--Livre 85-->
     <figure>
-      <a href="https://www.amazon.fr/Bleu-%C3%A0-l%C3%A2me-Nouvelle-%C3%A9dition/dp/2749168503/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=16QQCAFVLVNU2&dchild=1&keywords=dominici+christophe+livre&qid=1614189827&sprefix=dominici%2Caps%2C156&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61J6e9WuVxL.jpg" alt="Dominici" class="books" /></a>
+      <a href="https://www.amazon.fr/Bob-Marley-fille-du-dictateur/dp/2246818753/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MB09I0S2D5QE&dchild=1&keywords=anne+sophie+jahn&qid=1624447856&sprefix=anne+sophie+j%2Caps%2C152&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71NVsn1gv9L.jpg"
+          alt="La fille du dictateur" class="books" /></a>
       <figcaption>
-        Christophe Dominici
+        Anne-Sophie Jahn
       </figcaption>
       <figcaption>
-        Bleu à l'âme
+        Bob Marley et la
       </figcaption>
       <figcaption>
-        18,90€
+        fille du dictateur
+      </figcaption>
+      <figcaption>
+        20,00€
       </figcaption>
     </figure>
 
@@ -1540,16 +1543,16 @@
   <div class="booksLine">
     <!--Livre 93-->
     <figure>
-      <a href="https://www.amazon.fr/Autobiographie-Guy-Noves/dp/2755647272/ref=msx_wsirn_v1_7?pd_rd_w=zK0Lz&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=2493KAF559DDCRJK5T83&pd_rd_r=e97a429a-7bbb-471d-be84-0e4af5f6b738&pd_rd_wg=8EKy3&pd_rd_i=2755647272&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71x-503xTML.jpg" alt="Guy Noves" class="books" /></a>
+      <a href="https://www.amazon.fr/Lo-sciamano-Salvatore-Esposito/dp/8820071401/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1623591583&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/71qc0NtRwjS.jpg" alt="Lo sciamano" class="books" /></a>
       <figcaption>
-        Guy Noves
+        Salvatore Esposito
       </figcaption>
       <figcaption>
-        La tête haute
+        Lo sciamano
       </figcaption>
       <figcaption>
-        17,95€
+        18,90€
       </figcaption>
     </figure>
 
@@ -1573,16 +1576,19 @@
 
     <!--Livre 95-->
     <figure>
-      <a href="https://www.amazon.fr/grande-histoire-lafter-foot/dp/2755685816/ref=msx_wsirn_v1_4?pd_rd_w=RKiCG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=T2FZRTZMG7BETJQSDZ59&pd_rd_r=3837f6d2-23f1-47cd-9687-767bd921aec5&pd_rd_wg=q7ns2&pd_rd_i=2755685816&psc=1" target="_blank"> <img
-          src="https://www.amazon.fr/images/I/61UZTSI9uXL.jpg" alt="Génération After Foot" class="books" /></a>
+      <a href="https://www.amazon.fr/36-Histoires-poulets-dindics-tueurs/dp/2757870971/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=LDREYDMD7GUC&dchild=1&keywords=patricia+tourancheau&qid=1621266154&s=books&sprefix=patricia+toura%2Cstripbooks%2C155&sr=1-2"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51Ggoofn1yL.jpg" alt="Le 36 - Histoires de poulets, d'indics et de tueurs en série" class="books" /></a>
       <figcaption>
-        Pierre Adrian
+        Patricia Tourancheau
       </figcaption>
       <figcaption>
-        Génération After Foot
+        Le 36 - Histoires de poulets,
       </figcaption>
       <figcaption>
-        17,50€
+        d'indics et de tueurs en série
+      </figcaption>
+      <figcaption>
+        8,20€
       </figcaption>
     </figure>
 
@@ -1648,7 +1654,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/tempo-lento-Giuliano-Sangiorgi/dp/880624910X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1220IKN4HM4FM&dchild=1&keywords=il+tempo+di+un+lento&qid=1623591754&sprefix=il+tempo+di+un+%2Caps%2C149&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61OIz+Sac7S.jpg"
           alt="Il tempo di un lento" class="books" /></a>
@@ -1661,11 +1667,11 @@
       <figcaption>
         17,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
-    <!--Livre 101-->
+    <!--Livre 101
     <figure>
       <a href="https://www.amazon.fr/M%C3%A9moires-flous-Jim-Carrey/dp/2021471128/ref=sr_1_18?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jim+carrey&qid=1623591475&sr=8-18"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61hrgr9nyDL.jpg" alt="Jim Carrey" class="books" /></a>
@@ -1678,9 +1684,9 @@
       <figcaption>
         19,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 102-->
+    <!--Livre 102
     <figure>
       <a href="https://www.amazon.fr/36-Histoires-poulets-dindics-tueurs/dp/2757870971/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=LDREYDMD7GUC&dchild=1&keywords=patricia+tourancheau&qid=1621266154&s=books&sprefix=patricia+toura%2Cstripbooks%2C155&sr=1-2"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51Ggoofn1yL.jpg" alt="Le 36 - Histoires de poulets, d'indics et de tueurs en série" class="books" /></a>
@@ -1696,9 +1702,9 @@
       <figcaption>
         8,20€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 103-->
+    <!--Livre 103
     <figure>
       <a href="https://www.amazon.fr/Lo-sciamano-Salvatore-Esposito/dp/8820071401/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1623591583&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/71qc0NtRwjS.jpg" alt="Lo sciamano" class="books" /></a>
@@ -1711,9 +1717,9 @@
       <figcaption>
         18,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 104-->
+    <!--Livre 104
     <figure>
       <a href="https://www.amazon.fr/Bob-Marley-fille-du-dictateur/dp/2246818753/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MB09I0S2D5QE&dchild=1&keywords=anne+sophie+jahn&qid=1624447856&sprefix=anne+sophie+j%2Caps%2C152&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71NVsn1gv9L.jpg"
           alt="La fille du dictateur" class="books" /></a>
