--- a/livres.html
+++ b/livres.html
@@ -1654,20 +1654,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/tempo-lento-Giuliano-Sangiorgi/dp/880624910X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1220IKN4HM4FM&dchild=1&keywords=il+tempo+di+un+lento&qid=1623591754&sprefix=il+tempo+di+un+%2Caps%2C149&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61OIz+Sac7S.jpg"
-          alt="Il tempo di un lento" class="books" /></a>
+      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg"
+          alt="Le grand livre de la boxe" class="books" /></a>
       <figcaption>
-        Giuliano Sangiorgi
+        Jean-Phillipe Lustyk
       </figcaption>
       <figcaption>
-        Il tempo di un lento
+        Le grand livre de la boxe
       </figcaption>
       <figcaption>
-        17,00€
+        35,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
