--- a/livres.html
+++ b/livres.html
@@ -68,8 +68,8 @@
 
     <!--Livre 4-->
     <figure>
-      <a href="https://www.amazon.fr/MARGE-DERREUR-REY-NICOLAS/dp/B08VCJ1LZ7/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1626616403&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31MWx5CzjwS.jpg" alt="La marge d'ereur" class="books" /></a>
+      <a href="https://www.amazon.fr/MARGE-DERREUR-REY-NICOLAS/dp/B08VCJ1LZ7/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1626616403&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31MWx5CzjwS.jpg"
+          alt="La marge d'ereur" class="books" /></a>
       <figcaption>
         Nicolas Rey
       </figcaption>
@@ -757,8 +757,8 @@
 
     <!--Livre 47-->
     <figure>
-      <a href="https://www.amazon.fr/Carton-jaune-Nick-HORNBY/dp/2264051922/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1624447818&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/6147rvzgulL.jpg" alt="Carton jaune" class="books" /></a>
+      <a href="https://www.amazon.fr/Carton-jaune-Nick-HORNBY/dp/2264051922/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1624447818&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/6147rvzgulL.jpg" alt="Carton jaune"
+          class="books" /></a>
       <figcaption>
         Nick Hornby
       </figcaption>
@@ -915,8 +915,8 @@
   <div class="booksLine">
     <!-- Livre 57-->
     <figure>
-      <a href="https://www.amazon.fr/tempo-lento-Giuliano-Sangiorgi/dp/880624910X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1220IKN4HM4FM&dchild=1&keywords=il+tempo+di+un+lento&qid=1623591754&sprefix=il+tempo+di+un+%2Caps%2C149&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61OIz+Sac7S.jpg"
-          alt="Il tempo di un lento" class="books" /></a>
+      <a href="https://www.amazon.fr/tempo-lento-Giuliano-Sangiorgi/dp/880624910X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1220IKN4HM4FM&dchild=1&keywords=il+tempo+di+un+lento&qid=1623591754&sprefix=il+tempo+di+un+%2Caps%2C149&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61OIz+Sac7S.jpg" alt="Il tempo di un lento" class="books" /></a>
       <figcaption>
         Giuliano Sangiorgi
       </figcaption>
@@ -1338,8 +1338,8 @@
 
     <!--Livre 84-->
     <figure>
-      <a href="https://www.amazon.fr/M%C3%A9moires-flous-Jim-Carrey/dp/2021471128/ref=sr_1_18?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jim+carrey&qid=1623591475&sr=8-18"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61hrgr9nyDL.jpg" alt="Jim Carrey" class="books" /></a>
+      <a href="https://www.amazon.fr/M%C3%A9moires-flous-Jim-Carrey/dp/2021471128/ref=sr_1_18?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jim+carrey&qid=1623591475&sr=8-18" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61hrgr9nyDL.jpg" alt="Jim Carrey" class="books" /></a>
       <figcaption>
         Jim Carrey
       </figcaption>
@@ -1417,8 +1417,8 @@
   <div class="booksLine">
     <!--Livre 85-->
     <figure>
-      <a href="https://www.amazon.fr/Bob-Marley-fille-du-dictateur/dp/2246818753/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MB09I0S2D5QE&dchild=1&keywords=anne+sophie+jahn&qid=1624447856&sprefix=anne+sophie+j%2Caps%2C152&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71NVsn1gv9L.jpg"
-          alt="La fille du dictateur" class="books" /></a>
+      <a href="https://www.amazon.fr/Bob-Marley-fille-du-dictateur/dp/2246818753/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MB09I0S2D5QE&dchild=1&keywords=anne+sophie+jahn&qid=1624447856&sprefix=anne+sophie+j%2Caps%2C152&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71NVsn1gv9L.jpg" alt="La fille du dictateur" class="books" /></a>
       <figcaption>
         Anne-Sophie Jahn
       </figcaption>
@@ -1511,8 +1511,7 @@
 
     <!--Livre 91-->
     <figure>
-      <a href="https://www.amazon.fr/Linconnu-poste-Florence-Aubenas/dp/2823609857"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/51atcRLnF9L.jpg" alt="L'inconnu de la poste" class="books" /></a>
+      <a href="https://www.amazon.fr/Linconnu-poste-Florence-Aubenas/dp/2823609857" target="_blank"> <img src="https://www.amazon.fr/images/I/51atcRLnF9L.jpg" alt="L'inconnu de la poste" class="books" /></a>
       <figcaption>
         Florence Aubenas
       </figcaption>
@@ -1526,8 +1525,7 @@
 
     <!--Livre 92-->
     <figure>
-      <a href="https://www.amazon.fr/gp/product/2757820109/ref=dbs_a_def_rwt_bibl_vppi_i2" target="_blank"> <img src="https://www.amazon.fr/images/I/61QtjsXBRyL.jpg"
-          alt="La méprise. L'affaire d'Outreau" class="books" /></a>
+      <a href="https://www.amazon.fr/gp/product/2757820109/ref=dbs_a_def_rwt_bibl_vppi_i2" target="_blank"> <img src="https://www.amazon.fr/images/I/61QtjsXBRyL.jpg" alt="La méprise. L'affaire d'Outreau" class="books" /></a>
       <figcaption>
         Florence Aubenas
       </figcaption>
@@ -1543,8 +1541,8 @@
   <div class="booksLine">
     <!--Livre 93-->
     <figure>
-      <a href="https://www.amazon.fr/Lo-sciamano-Salvatore-Esposito/dp/8820071401/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1623591583&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71qc0NtRwjS.jpg" alt="Lo sciamano" class="books" /></a>
+      <a href="https://www.amazon.fr/Lo-sciamano-Salvatore-Esposito/dp/8820071401/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1623591583&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qc0NtRwjS.jpg"
+          alt="Lo sciamano" class="books" /></a>
       <figcaption>
         Salvatore Esposito
       </figcaption>
@@ -1594,8 +1592,8 @@
 
     <!--Livre 96-->
     <figure>
-      <a href="https://www.amazon.fr/Ho-visto-Diego-dico-vero/dp/8830901148/ref=pd_sim_7?pd_rd_w=S2kTy&pf_rd_p=3cf56746-caca-49ca-a035-b272242b29b5&pf_rd_r=H6CRY3DD42AN22SNXY7Z&pd_rd_r=b10de34c-44da-477d-949c-3ef90b39c9d2&pd_rd_wg=1Lp3W&pd_rd_i=8830901148&psc=1" target="_blank"> <img src="https://www.amazon.fr/images/I/91jRW4Kla1L.jpg"
-          alt="3000 giorni" class="books" /></a>
+      <a href="https://www.amazon.fr/Ho-visto-Diego-dico-vero/dp/8830901148/ref=pd_sim_7?pd_rd_w=S2kTy&pf_rd_p=3cf56746-caca-49ca-a035-b272242b29b5&pf_rd_r=H6CRY3DD42AN22SNXY7Z&pd_rd_r=b10de34c-44da-477d-949c-3ef90b39c9d2&pd_rd_wg=1Lp3W&pd_rd_i=8830901148&psc=1"
+        target="_blank"> <img src="https://www.amazon.fr/images/I/91jRW4Kla1L.jpg" alt="3000 giorni" class="books" /></a>
       <figcaption>
         Ciro Ferrara
       </figcaption>
@@ -1656,8 +1654,8 @@
 
     <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg"
-          alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
       <figcaption>
         Jean-Phillipe Lustyk
       </figcaption>
@@ -1671,103 +1669,109 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 101
+    <!--Livre 101-->
     <figure>
-      <a href="https://www.amazon.fr/M%C3%A9moires-flous-Jim-Carrey/dp/2021471128/ref=sr_1_18?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jim+carrey&qid=1623591475&sr=8-18"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61hrgr9nyDL.jpg" alt="Jim Carrey" class="books" /></a>
+      <a href="https://www.amazon.fr/Quando-abbiamo-smesso-capire-mondo/dp/8845935183/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1628703680&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61siQ16nxRL.jpg"
+          alt="Quando abbiamo smesso di capire il mondo" class="books" /></a>
       <figcaption>
-        Jim Carrey
+        Benjamin Labatut
       </figcaption>
       <figcaption>
-        Mémoires flous
+        Quando abbiamo smesso
+      </figcaption>
+      <figcaption>
+        di capire il mondo
+      </figcaption>
+      <figcaption>
+        18,00€
+      </figcaption>
+    </figure>
+
+    <!--Livre 102-->
+    <figure>
+      <a href="https://www.amazon.fr/Biblioth%C3%A8que-survie-Fr%C3%A9d%C3%A9ric-Beigbeder/dp/B08TZ9QYD5/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3LX5G0NB2AD98&dchild=1&keywords=beigbeder&qid=1628692677&sprefix=beigbeder%2Caps%2C157&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41pl2nTMxmS.jpg" alt="Bibliothèque de survie" class="books" /></a>
+      <figcaption>
+        Frédéric Beigbeder
+      </figcaption>
+      <figcaption>
+        Bibliothèque de survie
+      </figcaption>
+      <figcaption>
+        18,00€
+      </figcaption>
+    </figure>
+
+    <!--Livre 103-->
+    <figure>
+      <a href="https://www.amazon.fr/Zidane-Fr%C3%A9d%C3%A9ric-Hermel/dp/2081490617/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1628585574&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71rqSbMzArL.jpg" alt="Zidane"
+          class="books" /></a>
+      <figcaption>
+        Frédéric Hermel
+      </figcaption>
+      <figcaption>
+        Zidane
+      </figcaption>
+      <figcaption>
+        19,90€
+      </figcaption>
+    </figure>
+
+    <!--Livre 104-->
+    <figure>
+      <a href="https://www.amazon.fr/Orl%C3%A9ans-roman-Yann-Moix/dp/2246820510/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=yann+moix&qid=1628692662&sr=8-2" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61aGFWp0-ML.jpg" alt="Orléans" class="books" /></a>
+      <figcaption>
+        Yann Moix
+      </figcaption>
+      <figcaption>
+        Orléans
       </figcaption>
       <figcaption>
         19,00€
       </figcaption>
-    </figure>-->
-
-    <!--Livre 102
-    <figure>
-      <a href="https://www.amazon.fr/36-Histoires-poulets-dindics-tueurs/dp/2757870971/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=LDREYDMD7GUC&dchild=1&keywords=patricia+tourancheau&qid=1621266154&s=books&sprefix=patricia+toura%2Cstripbooks%2C155&sr=1-2"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51Ggoofn1yL.jpg" alt="Le 36 - Histoires de poulets, d'indics et de tueurs en série" class="books" /></a>
       <figcaption>
-        Patricia Tourancheau
+        Livre 1 sur 4 (seulement 2 parus)
       </figcaption>
       <figcaption>
-        Le 36 - Histoires de poulets,
-      </figcaption>
-      <figcaption>
-        d'indics et de tueurs en série
-      </figcaption>
-      <figcaption>
-        8,20€
-      </figcaption>
-    </figure>-->
-
-    <!--Livre 103
-    <figure>
-      <a href="https://www.amazon.fr/Lo-sciamano-Salvatore-Esposito/dp/8820071401/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1623591583&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71qc0NtRwjS.jpg" alt="Lo sciamano" class="books" /></a>
-      <figcaption>
-        Salvatore Esposito
-      </figcaption>
-      <figcaption>
-        Lo sciamano
-      </figcaption>
-      <figcaption>
-        18,90€
-      </figcaption>
-    </figure>-->
-
-    <!--Livre 104
-    <figure>
-      <a href="https://www.amazon.fr/Bob-Marley-fille-du-dictateur/dp/2246818753/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MB09I0S2D5QE&dchild=1&keywords=anne+sophie+jahn&qid=1624447856&sprefix=anne+sophie+j%2Caps%2C152&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71NVsn1gv9L.jpg"
-          alt="La fille du dictateur" class="books" /></a>
-      <figcaption>
-        Anne-Sophie Jahn
-      </figcaption>
-      <figcaption>
-        Bob Marley et la
-      </figcaption>
-      <figcaption>
-        fille du dictateur
-      </figcaption>
-      <figcaption>
-        20,00€
+        (seulement 2 parus)
       </figcaption>
     </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 105
+    <!--Livre 105-->
     <figure>
-      <a href="https://www.amazon.fr/Carton-jaune-Nick-HORNBY/dp/2264051922/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1624447818&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/6147rvzgulL.jpg" alt="Carton jaune" class="books" /></a>
+      <a href="https://www.amazon.fr/Reims-Yann-Moix/dp/2246823447/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=yann+moix&qid=1628692662&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61G2iydjLyL.jpg" alt="Reims" class="books" /></a>
       <figcaption>
-        Nick Hornby
+        Yann Moix
       </figcaption>
       <figcaption>
-        Carton jaune
+        Reims
       </figcaption>
       <figcaption>
-        7,50€
+        19,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 106
+    <!--Livre 106-->
     <figure>
-      <a href="https://www.amazon.fr/MARGE-DERREUR-REY-NICOLAS/dp/B08VCJ1LZ7/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1626616403&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31MWx5CzjwS.jpg" alt="La marge d'ereur" class="books" /></a>
+      <a href="https://www.amazon.fr/%C3%A9tait-une-fois-%C3%A0-Hollywood/dp/2213721017/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=tarantino&qid=1628544363&rnid=1703605031&s=books&sr=1-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61QYMtKlHsS.jpg" alt="Il était une fois à Hollywood" class="books" /></a>
       <figcaption>
-        Nicolas Rey
+        Quentin Tarantino
       </figcaption>
       <figcaption>
-        La Marge D'erreur
+        Il était une fois
       </figcaption>
       <figcaption>
-        18,00€
+        à Hollywood
       </figcaption>
-    </figure>-->
+      <figcaption>
+        23,00€ (sortie 25 aout)
+      </figcaption>
+    </figure>
 
     <!--Livre 107
     <figure>
