modifications mise en page

--- a/livres.html
+++ b/livres.html
@@ -47,6 +47,9 @@
         3000 giorni con la Juve campione d'Italia
       </figcaption>
       <figcaption>
+        campione d'Italia
+      </figcaption>
+      <figcaption>
         18,00€
       </figcaption>
     </figure>
@@ -653,7 +656,10 @@
         Jordan Belfort
       </figcaption>
       <figcaption>
-        Vendre: Les secrets de ma méthode
+        Vendre:
+      </figcaption>
+      <figcaption>
+        Les secrets de ma méthode
       </figcaption>
       <figcaption>
         17,90€
@@ -685,7 +691,10 @@
         Mélanie Georgiades
       </figcaption>
       <figcaption>
-        Mélanie, Française et musulmane
+        Mélanie, Française et
+      </figcaption>
+      <figcaption>
+        musulmane
       </figcaption>
       <figcaption>
         7,20€
@@ -860,7 +869,10 @@
         Robert Broussard
       </figcaption>
       <figcaption>
-        Mémoires du commissaire Broussard
+        Mémoires du
+      </figcaption>
+      <figcaption>
+        Commissaire Broussard
       </figcaption>
       <figcaption>
         12,50€
@@ -905,6 +917,9 @@
       </figcaption>
       <figcaption>
         On ne reveille pas un juge qui dort
+      </figcaption>
+      <figcaption>
+        juge qui dort
       </figcaption>
       <figcaption>
         25,00€
@@ -1016,7 +1031,10 @@
         Gilbert Thiel
       </figcaption>
       <figcaption>
-        Derniers jugements avant liquidation
+        Derniers jugements avant
+      </figcaption>
+      <figcaption>
+        liquidation
       </figcaption>
       <figcaption>
         18,25€
@@ -1093,7 +1111,10 @@
         Mourad Boudjellal
       </figcaption>
       <figcaption>
-        Un président devrait dire ça plus souvent
+        Un président devrait dire
+      </figcaption>
+      <figcaption>
+        ça plus souvent
       </figcaption>
       <figcaption>
         19,00€
@@ -1140,7 +1161,10 @@
         Olivier Guez
       </figcaption>
       <figcaption>
-        Une passion absurde et dévorante
+        Une passion absurde
+      </figcaption>
+      <figcaption>
+        et dévorante
       </figcaption>
       <figcaption>
         Ecrits sur le football
@@ -1299,7 +1323,10 @@
         Sébastien Spitzer
       </figcaption>
       <figcaption>
-        Dans les flammes de Notre-Dame
+        Dans les flammes
+      </figcaption>
+      <figcaption>
+        de Notre-Dame
       </figcaption>
       <figcaption>
         19,90€
@@ -1329,7 +1356,10 @@
         Patricia Tourancheau
       </figcaption>
       <figcaption>
-        Grégory - La machination familiale
+        Grégory
+      </figcaption>
+      <figcaption>
+        La machination familiale
       </figcaption>
       <figcaption>
         18,00€
@@ -1731,7 +1761,7 @@
         19,00€
       </figcaption>
       <figcaption>
-        Livre 1 sur 4 (seulement 2 parus)
+        Livre 1 sur 4
       </figcaption>
       <figcaption>
         (seulement 2 parus)
@@ -1752,6 +1782,12 @@
       </figcaption>
       <figcaption>
         19,50€
+      </figcaption>
+      <figcaption>
+        Livre 2 sur 4
+      </figcaption>
+      <figcaption>
+        (seulement 2 parus)
       </figcaption>
     </figure>
 
