--- a/autres.html
+++ b/autres.html
@@ -21,22 +21,24 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1
+    <!--Autres 1-->
     <figure>
-      <a href="https://www.amazon.fr/Kaamelott-Livres-lInt%C3%A9grale-s%C3%A9rie-Blu-ray/dp/B07F576MSG/?_encoding=UTF8&pd_rd_w=SlLqP&pf_rd_p=9c892acd-7567-4862-a77a-6ab6f5960ea7&pf_rd_r=H104HHPJPWY4VC3JYMHZ&pd_rd_r=9ff2c9ee-5959-4f8a-91d3-822cb4342857&pd_rd_wg=WvcTS&ref_=pd_gw_crs_zg_bs_405322" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61QFDgac5dL._AC_SL1000_.jpg"
-          alt="Kaamelott" class="others" /></a>
+      <a href="https://www.amazon.fr/Friends-Lint%C3%A9grale-Saisons-10-%C3%89dition-25%C3%A8me-Anniversaire/dp/B07T2H6SWY/ref=tmm_blu_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61qropy1d-S._AC_SL1000_.jpg" alt="Friends" class="others" /></a>
       <figcaption>
-        Kaamelott - l'intégrale en BluRay
+        Friends - l'intégrale en BluRay
       </figcaption>
       <figcaption>
-        79,99€
+        Edition 25 ans
       </figcaption>
-    </figure>-->
+      <figcaption>
+        100,77€
+      </figcaption>
+    </figure>
 
     <!--Autres 2-->
     <figure>
-      <a href="#" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/715rGsf7GtL._AC_SL1000_.jpg" alt="GoT" class="others" /></a>
+      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/715rGsf7GtL._AC_SL1000_.jpg" alt="GoT" class="others" /></a>
       <figcaption>
         Game of Thrones - l'intégrale en BluRay
       </figcaption>
@@ -60,22 +62,17 @@
       </figcaption>
     </figure>
 
-    <!--Autres 4
+    <!--Autres 4-->
     <figure>
-      <a href="*" target="_blank"> <img src="https://static.fnac-static.com/multimedia/Images/FR/NR/49/63/b1/11625289/1507-1/tsp20200219145134/Star-Wars-L-Ascension-de-Skywalker-DVD.jpg" alt="Star Wars" class="others" /></a>
+      <a href="https://www.amazon.fr/grand-quiz-after-foot/dp/2013962959/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=after+foot+la+revue&qid=1628866062&sr=8-12" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/71ZF-FzHgKL.jpg" alt="Le grand quiz after foot" class="others" /></a>
       <figcaption>
-        Blu Ray Star Wars
+        Le grand quiz after foot
       </figcaption>
       <figcaption>
-        L'ascension de Skywalker
+        19,99€
       </figcaption>
-      <figcaption>
-        Voir si dispo à Cora ou autre endroit
-      </figcaption>
-      <figcaption>
-        Rupture de stock sur Amazon
-      </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="othersLine">
