--- a/livres.html
+++ b/livres.html
@@ -1824,52 +1824,55 @@
       </figcaption>
     </figure>
 
-    <!--Livre 108
+    <!--Livre 108-->
     <figure>
-      <a href="https://www.amazon.fr/3000-giorni-Juve-campione-dItalia/dp/8893883562/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1606989650&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Dys+JGVkL.jpg"
-          alt="3000 giorni" class="books" /></a>
+      <a href="https://www.amazon.fr/beautiful-game-Romain-Molina/dp/2491031019/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=romain+molina&qid=1629731693&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91HvO3vVrYL.jpg"
+          alt="The beautiful game" class="books" /></a>
       <figcaption>
-        Massimo Zampini
+        Romain Molina
       </figcaption>
       <figcaption>
-        3000 giorni con la Juve campione d'Italia
+        The beautiful game
       </figcaption>
       <figcaption>
-        18,00€
+        18,50€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 109
+    <!--Livre 109-->
     <figure>
-      <a href="https://www.amazon.fr/principes-fondamentaux-%C3%A9checs-Jos%C3%A9-Capablanca/dp/2916340831/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=Les+principes+fondamentaux+aux+%C3%A9checs&qid=1605408386&s=books&sr=1-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61wiKslr7hL.jpg" alt="Les principes fondamentaux des échecs" class="books" /></a>
+      <a href="https://www.amazon.fr/mano-negra-obscures-contr%C3%B4lent-football/dp/2755640197/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr="
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61I3dBZMUXL.jpg" alt="La mano negra" class="books" /></a>
       <figcaption>
-        José Raul Capablanca
+        Romain Molina
       </figcaption>
       <figcaption>
-        Les principes fondamentaux des échecs
+        La mano negra
       </figcaption>
       <figcaption>
-        15,00€
+        15,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 110
+    <!--Livre 110-->
     <figure>
-      <a href="https://www.amazon.fr/carri%C3%A8re-%C3%A9chiqu%C3%A9enne-Jose-Raul-Capablanca/dp/232209661X/ref=sr_1_9?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2WIUY9RCKH7BO&dchild=1&keywords=jose+raul+capablanca&qid=1605408503&sprefix=jose+rau%2Cstripbooks%2C175&sr=8-9"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Btuo81U3L.jpg" alt="Ma carrière échiquéenne" class="books" /></a>
+      <a href="https://www.amazon.fr/Comment-gagner-match-Rapha%C3%ABl-COSMIDIS/dp/226317382X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2N76NH5YFDL72&dchild=1&keywords=comment+gagner+un+match+de+foot&qid=1629739485&sprefix=comment+gagner+un+%2Caps%2C163&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71bjbiWUN1L.jpg" alt="Comment gagner un match de foot ?" class="books" /></a>
       <figcaption>
-        José-Raúl Capablanca
+        Les Cahiers du Foot
       </figcaption>
       <figcaption>
-        Ma carrière échiquéenne
+        Comment gagner
       </figcaption>
       <figcaption>
-        18,00€
+        un match de foot ?
       </figcaption>
-    </figure>-->
+      <figcaption>
+        17,90€
+      </figcaption>
+    </figure>
 
     <!--Livre 111
     <figure>
