--- a/livres.html
+++ b/livres.html
@@ -44,7 +44,7 @@
         Massimo Zampini
       </figcaption>
       <figcaption>
-        3000 giorni con la Juve campione d'Italia
+        3000 giorni con la Juve
       </figcaption>
       <figcaption>
         campione d'Italia
@@ -916,7 +916,7 @@
         Gilbert Thiel
       </figcaption>
       <figcaption>
-        On ne reveille pas un juge qui dort
+        On ne reveille pas un
       </figcaption>
       <figcaption>
         juge qui dort
