--- a/livres.html
+++ b/livres.html
@@ -1719,16 +1719,19 @@
 
     <!--Livre 102-->
     <figure>
-      <a href="https://www.amazon.fr/Biblioth%C3%A8que-survie-Fr%C3%A9d%C3%A9ric-Beigbeder/dp/B08TZ9QYD5/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3LX5G0NB2AD98&dchild=1&keywords=beigbeder&qid=1628692677&sprefix=beigbeder%2Caps%2C157&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41pl2nTMxmS.jpg" alt="Bibliothèque de survie" class="books" /></a>
+      <a href="https://www.amazon.fr/Comment-gagner-match-Rapha%C3%ABl-COSMIDIS/dp/226317382X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2N76NH5YFDL72&dchild=1&keywords=comment+gagner+un+match+de+foot&qid=1629739485&sprefix=comment+gagner+un+%2Caps%2C163&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71bjbiWUN1L.jpg" alt="Comment gagner un match de foot ?" class="books" /></a>
       <figcaption>
-        Frédéric Beigbeder
+        Les Cahiers du Foot
       </figcaption>
       <figcaption>
-        Bibliothèque de survie
+        Comment gagner
       </figcaption>
       <figcaption>
-        18,00€
+        un match de foot ?
+      </figcaption>
+      <figcaption>
+        17,90€
       </figcaption>
     </figure>
 
@@ -1856,7 +1859,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 110-->
+    <!--Livre 110
     <figure>
       <a href="https://www.amazon.fr/Comment-gagner-match-Rapha%C3%ABl-COSMIDIS/dp/226317382X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2N76NH5YFDL72&dchild=1&keywords=comment+gagner+un+match+de+foot&qid=1629739485&sprefix=comment+gagner+un+%2Caps%2C163&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71bjbiWUN1L.jpg" alt="Comment gagner un match de foot ?" class="books" /></a>
@@ -1872,7 +1875,7 @@
       <figcaption>
         17,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 111
     <figure>
