correction livre reverchon

--- a/livres.html
+++ b/livres.html
@@ -1932,13 +1932,10 @@
         Rémi Reverchon
       </figcaption>
       <figcaption>
-        ROAD TRIP NBA:
+        Road Trip NBA :
       </figcaption>
       <figcaption>
-        DE BOSTON A LOS ANGELES
-      </figcaption>
-      <figcaption>
-        VOYAGE AU COEUR DE LA CULTURE US
+        De Boston à Los Angeles
       </figcaption>
       <figcaption>
         34,95€
