--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,30 +22,33 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1
+    <!--Jeu 1-->
     <figure>
-        <a href="https://www.amazon.fr/Ratchet-Clank-Rift-Apart-PS5/dp/B08WQMRHPS/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1NLKEKJTXLEH4&dchild=1&keywords=ratchet+et+clank+ps5&qid=1623600714&sprefix=ratchet%2Caps%2C169&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71sR60hYpbS._AC_SL1000_.jpg" alt="NBA 2K21" class="game" /></a>
+        <a href="#" target="_blank"> <img src="https://images.ctfassets.net/j95d1p8hsuun/5tad2SDo5WucQxXTcS8L7V/e04ed6cddc797efcf66638f64a7b3ca9/Standard_edition-boxart.jpg" alt="New World" class="game" /></a>
       <figcaption>
-        Ratchet & Clank: Rift Apart
+        New World
       </figcaption>
       <figcaption>
-        61,99€
+        40,00€ sur Steam
       </figcaption>
-    </figure>-->
+      <figcaption>
+        A payer moi-même
+      </figcaption>
+    </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://s1.gaming-cdn.com/images/products/7383/271x377/football-manager-2021-cover.jpg" alt="NBA 2K21" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://image.jeuxvideo.com/medias/159221/1592210734-3246-jaquette-avant.jpg" alt="Icarus" class="game" /></a>
       <figcaption>
-        Fotball Manager 2021
+        Icarus
       </figcaption>
       <figcaption>
-        Prix à définir sur amazon ou à
+        25€sur Steam
       </figcaption>
       <figcaption>
-        commander moi même sur instang gaming
+        A payer moi-même
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Jeu 3
     <figure>
