--- a/autres.html
+++ b/autres.html
@@ -62,7 +62,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 4-->
+    <!--Autres 4
     <figure>
       <a href="https://www.amazon.fr/grand-quiz-after-foot/dp/2013962959/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=after+foot+la+revue&qid=1628866062&sr=8-12" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/71ZF-FzHgKL.jpg" alt="Le grand quiz after foot" class="others" /></a>
@@ -72,7 +72,7 @@
       <figcaption>
         19,99€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="othersLine">
