--- a/autres.html
+++ b/autres.html
@@ -38,19 +38,20 @@
 
     <!--Autres 2-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/715rGsf7GtL._AC_SL1000_.jpg" alt="GoT" class="others" /></a>
+      <a href="https://www.amazon.fr/Thrones-Tr%C3%B4ne-Lint%C3%A9grale-Saisons-Blu-Ray/dp/B07SZBK3WR/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=integrale+game+of+thrones&qid=1632925004&sr=8-2" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/715rGsf7GtL._AC_SL1000_.jpg" alt="GoT" class="others" /></a>
       <figcaption>
         Game of Thrones - l'intégrale en BluRay
       </figcaption>
       <figcaption>
-        Indisponible pour l'instant
+        84,98€
       </figcaption>
     </figure>
 
     <!--Autres 3-->
     <figure>
       <a href="https://www.amazon.fr/Chernobyl-Blu-Ray-Jared-Harris/dp/B07SZGSXT3?pf_rd_p=eab93c21-6a33-4780-aa56-35c8fe5fc951&pd_rd_wg=srzCG&pf_rd_r=JRY7AN681R6AYFAFNDXQ&ref_=pd_gw_cr_simh&pd_rd_w=xJ0th&pd_rd_r=298834d5-8235-4e45-8dcb-0eda62497f72"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51NHFmY-YcS._AC_SL1000_.jpg" alt="Intégrale Chernobyl" class="others" /></a>
+        target="_blank"> <img src="https://www.amazon.fr/images/I/61+Ps6f1+mS._AC_SL1000_.jpg" alt="Intégrale Chernobyl" class="others" /></a>
       <figcaption>
         Intégrale Chernobyl
       </figcaption>
@@ -62,17 +63,17 @@
       </figcaption>
     </figure>
 
-    <!--Autres 4
+    <!--Autres 4-->
     <figure>
-      <a href="https://www.amazon.fr/grand-quiz-after-foot/dp/2013962959/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=after+foot+la+revue&qid=1628866062&sr=8-12" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71ZF-FzHgKL.jpg" alt="Le grand quiz after foot" class="others" /></a>
+      <a href="https://www.amazon.fr/Calendario-geniale-condividi-pensieri-filosofici/dp/8863865973/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=calendario+geniale&qid=1629199765&sr=8-4" target="_blank"> <img
+          src="https://www.amazon.fr/images/I/61jheIZgSCL.jpg" alt="Calendario" class="others" /></a>
       <figcaption>
-        Le grand quiz after foot
+        Calendario ingeniale 2022
       </figcaption>
       <figcaption>
-        19,99€
+        13,90€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="othersLine">
