--- a/livres.html
+++ b/livres.html
@@ -1826,8 +1826,8 @@
 
     <!--Livre 108-->
     <figure>
-      <a href="https://www.amazon.fr/beautiful-game-Romain-Molina/dp/2491031019/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=romain+molina&qid=1629731693&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91HvO3vVrYL.jpg"
-          alt="The beautiful game" class="books" /></a>
+      <a href="https://www.amazon.fr/beautiful-game-Romain-Molina/dp/2491031019/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=romain+molina&qid=1629731693&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/91HvO3vVrYL.jpg" alt="The beautiful game" class="books" /></a>
       <figcaption>
         Romain Molina
       </figcaption>
@@ -1843,8 +1843,8 @@
   <div class="booksLine">
     <!--Livre 109-->
     <figure>
-      <a href="https://www.amazon.fr/mano-negra-obscures-contr%C3%B4lent-football/dp/2755640197/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr="
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61I3dBZMUXL.jpg" alt="La mano negra" class="books" /></a>
+      <a href="https://www.amazon.fr/mano-negra-obscures-contr%C3%B4lent-football/dp/2755640197/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61I3dBZMUXL.jpg"
+          alt="La mano negra" class="books" /></a>
       <figcaption>
         Romain Molina
       </figcaption>
@@ -1891,8 +1891,8 @@
 
     <!--Livre 112-->
     <figure>
-      <a href="https://www.amazon.fr/LOdyss%C3%A9e-du-10-Rapha%C3%ABl-COSMIDIS/dp/2263157794/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=l%27ody%C3%A9e+du+10&qid=1632134540&sr=8-1" target="_blank"> <img src="https://www.amazon.fr/images/I/61W9+kgXLfL.jpg"
-          alt="L'Odyssée du 10" class="books" /></a>
+      <a href="https://www.amazon.fr/LOdyss%C3%A9e-du-10-Rapha%C3%ABl-COSMIDIS/dp/2263157794/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=l%27ody%C3%A9e+du+10&qid=1632134540&sr=8-1" target="_blank"> <img
+          src="https://www.amazon.fr/images/I/61W9+kgXLfL.jpg" alt="L'Odyssée du 10" class="books" /></a>
       <figcaption>
         Les Cahiers du Foot
       </figcaption>
