suppression new world

--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,7 +22,7 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
       <a href="#" target="_blank"> <img src="https://images.ctfassets.net/j95d1p8hsuun/5tad2SDo5WucQxXTcS8L7V/e04ed6cddc797efcf66638f64a7b3ca9/Standard_edition-boxart.jpg" alt="New World" class="game" /></a>
       <figcaption>
@@ -34,7 +34,7 @@
       <figcaption>
         A payer moi-même
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2-->
     <figure>
