--- a/livres.html
+++ b/livres.html
@@ -1945,35 +1945,35 @@
       </figcaption>
     </figure>
 
-    <!--Livre 115
+    <!--Livre 115-->
     <figure>
-      <a href="https://www.amazon.fr/Churchill-Andrew-ROBERTS/dp/2262081190/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=churchill&qid=1605651658&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61XvcwjjMdL.jpg" alt="Churchill" class="books" /></a>
+      <a href="https://www.amazon.fr/Rise-Brand-Autobiography-Siya-Kolisi/dp/0008431337/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1633611449&sr=8-1" target="_blank"> <img
+          src="https://www.amazon.fr/images/I/81FiQbKbuuS.jpg" alt="Churchill" class="books" /></a>
       <figcaption>
-        Andrew Roberts
+        Siya Kolisi
       </figcaption>
       <figcaption>
-        Churchill
+        Rise
       </figcaption>
       <figcaption>
-        29,00€
+        21,71€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 116
+    <!--Livre 116-->
     <figure>
-      <a href="https://www.amazon.fr/3000-giorni-Juve-campione-dItalia/dp/8893883562/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1606989650&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Dys+JGVkL.jpg"
+      <a href="https://www.amazon.fr/Tyson-Fury-autobiographie-TYSON-FURY/dp/2501155114/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1633884966&sr=8-1" target="_blank"> <img src="https://www.amazon.fr/images/I/91UP-+hdBiL.jpg"
           alt="3000 giorni" class="books" /></a>
       <figcaption>
-        Massimo Zampini
+        Tyson Fury
       </figcaption>
       <figcaption>
-        3000 giorni con la Juve campione d'Italia
+        Mon autobiographie
       </figcaption>
       <figcaption>
-        18,00€
+        20,90€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
