--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,19 +22,16 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
-      <a href="https://www.instant-gaming.com/fr/8021-acheter-football-manager-2022-pc-jeu-steam-europe/" target="_blank"> <img src="https://m.media-amazon.com/images/I/81zyFUJXYGL._AC_SL1500_.jpg" alt="FM 2022" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://m.media-amazon.com/images/I/71-o7Rap2HL._AC_SL1378_.jpg" alt="CoD" class="game" /></a>
       <figcaption>
-        Football Manager 2022
+        Call of Duty Vanguard
       </figcaption>
       <figcaption>
-        +- 35€
+        80€
       </figcaption>
-      <figcaption>
-        A payer moi-même
-      </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2-->
     <figure>
